- Wrap code optimized for architectures without alignment constraints   in #ifdef __NO_STRICT_ALIGNMENT rather than #ifdef __i386__. This   means that amd64 now also uses the optimized code. [1]   While at it, fix a nearby style(9) bug. - Remove the hw.dc_quick SYSCTL, which allowed to turn off the above   mentioned optimization, as like the equivalent and already removed - In dc_setcfg() suppress printing a warning when forcing the receiver   and transceiver to idle state times out for chips where the status   bits in question just never change (observed in detail with DM9102A)   and therefore the warning would be highly likely false positive. [2] - In dc_ifmedia_sts() add a missing DC_UNLOCK().

Tested by:	Hans-Joerg Sirtl on amd64 [1]
PR:		82681 [2]
Obtained from:	NetBSD tlp(4) [2]
MFC after:	1 week